# bricabrac

./: LICENSE  README  README.md  setup.cfg
src/bricabrac/: bricabrac.py
