[metadata]
name = bricabrac
version = 0.0.1
author = Peter Prescott
author_email = prescott.peter@gmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peterprescott/bricabrac
project_urls =
    Bug Tracker =https://github.com/peterprescott/bricabrac/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    networkx

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bricabrac = bricabrac.bricabrac:main
